Add babel and browserify

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="euclidean.js"></script>
+    <script src="bundle.js"></script>
     <title>Euclidean Rhythms Demo</title>
   </head>
   <body>
-    <header>Euclidean Rhythms</header>
-
-    <div class="gcd">
-      <input type="number" id="large-num">
-      <input type="number" id="small-num">
+    <header class="header"><h1>Euclidean Rhythms</h1></header>
+    <div class="wrapper">
+      <button class="btn btn-play" onclick="play()">Play</button>
     </div>
-
-    <button onclick="play()">Play</button>
   </body>
 </html>
